Implement complete cabin CRUD APIs